gcc/testsuite/rust/rustc/ui/issues/issue-3044.rs
fn main() {
    let needlesArr: Vec<char> = vec!['a', 'f'];
    needlesArr.iter().fold(|x, y| {
    });
// { dg-error ".E0061." "" { target *-*-* } .-2 }
}

